2002-11-15  David Hyatt  <hyatt@apple.com>

	Fix bustage with <nobr> tags.  Inline nowrap elements were
	breaking on images when they shouldn't have.
	
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::calcInlineMinMaxWidth):

2002-11-15  Ken Kocienda  <kocienda@apple.com>

	Fix for this bug:

	Radar 3102708 (REGRESSION: assertion failure backing up to page)

	KWQCheckCacheObjectStatus did not create an NSURL in a way that 
	dealt with the fact that we handle non-NSURL-compliant URL strings.
	I have fixed it so it does, and in the process, factored out
	the code to do it into a new KURL static function (KURL::getNSURLFromString).

        * kwq/KWQKURL.h:
        * kwq/KWQKURL.mm:
        (KURL::getNSURL): Now calls through to KURL::getNSURLFromString
        (KURL::encode_string)
        (KURL::getNSURLFromString): New function to handle NSURL creation
        * kwq/KWQLoader.mm:
        (KWQCheckCacheObjectStatus)

2002-11-15  David Hyatt  <hyatt@apple.com>

	Fix asserts in tables.
	
        * khtml/rendering/render_table.cpp:
        (RenderTableRow::layout):

2002-11-15  David Hyatt  <hyatt@apple.com>

	Fix for whitespace regressions that caused text overlapping
	and text spilling.
	
        * khtml/rendering/bidi.cpp:
        (appendRunsForObject):

2002-11-15  David Hyatt  <hyatt@apple.com>

	Fix newlines getting stripped out of textareas by not making
	rendertext objects for children of textareas.
	
        * khtml/rendering/render_form.h:
        * khtml/rendering/render_object.h:
        * khtml/xml/dom_textimpl.cpp:
        (TextImpl::attach):

2002-11-15  David Hyatt  <hyatt@apple.com>

	Make <form> inside <table> stay inside the <table> but demote
	itself to a leaf.  Then the children of the <form> are treated
	as though they occurred underneath the <table> itself.  Everything
	KHTML does with this is completely wrong but this band-aid should
	hopefully suffice until 1.0.

	Also allowing <input type="hidden"> to be constructed and attached